# lastfm-edit

./: .envrc  .envrc.local.example  .gitignore  .rgignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  album_search_page.html  artist_library_page.html  debug_login_test.rs  flake.nix  justfile  messed_up_beatles_tracks.json  test_album_artist.rs  things_to_test.md  track.sh  track_search_ajax_1.html  track_search_ajax_2.html  track_search_ajax_3.html  track_search_page.html
.claude/: settings.local.json
.github/workflows/: ci.yml  release-scrobble-scrubber.yml
coverage/: tarpaulin-report.html
crates/scrobble-scrubber/: Cargo.toml  README.md
crates/scrobble-scrubber-app/: Cargo.toml  Dioxus.toml  README.md
crates/scrobble-scrubber-app/assets/: styles.css
crates/scrobble-scrubber-app/src/: background.rs  core.rs  desktop.rs  http.rs  main.rs  model.rs
crates/scrobble-scrubber-app/src/components/: activity_log.rs  intent_card.rs  mod.rs
crates/scrobble-scrubber-app/src/views/: dashboard.rs  history.rs  library.rs  mod.rs  queue.rs  review.rs  sync.rs  work_queue.rs
crates/scrobble-scrubber/src/: default_rules.rs  error.rs  events.rs  executor.rs  feed.rs  filters.rs  handle.rs  lib.rs  openai.rs  ops.rs  planner.rs  policy.rs  projection.rs  provider.rs  queue.rs  rewrite.rs  subject.rs
crates/scrobble-scrubber/src/musicbrainz/: client.rs  compilation_provider.rs  mod.rs  musicbrainz_provider.rs
crates/scrobble-scrubber/src/state/: fs.rs  memory.rs  mod.rs
crates/scrobble-scrubber/tests/: executor.rs  handle.rs  musicbrainz_live.rs  planner.rs  rewrite.rs  state.rs
crates/scrobble-store/: Cargo.toml
crates/scrobble-store/src/: coverage.rs  error.rs  id.rs  lib.rs  record.rs  source.rs
crates/scrobble-store/src/edits/: log_types.rs  mod.rs
crates/scrobble-store/src/storage/: fs.rs  index.rs  memory.rs  mod.rs
crates/scrobble-store/src/sync/: engine.rs  events.rs  mod.rs
crates/scrobble-store/tests/: mirrored_edits.rs  sync_engine.rs
examples/: artist_tracks.rs  artist_tracks_direct.rs  clean_artist_tracks.rs  clean_beatles_albums.rs  clean_beatles_catalog.rs  clean_beatles_full_catalog.rs  common.rs  context_based_edit.rs  custom_session_manager.rs  debug_album_url.rs  debug_html.rs  debug_page2.rs  debug_rate_limit_probe.rs  debug_selectors.rs  edit_scrobble.rs  enrich_metadata_example.rs  examine_beatles_albums.rs  full_tracklist.rs  list_album_tracks.rs  list_artist_tracks.rs  list_artist_tracks_by_album.rs  list_recent_tracks.rs  list_tracks.rs  load_track_metadata.rs  login_test.rs  rate_limit_events.rs  rate_limit_monitoring.rs  real_scrobble_edit.rs  remove_remaster.rs  rename_album.rs  rename_artist.rs  save_album_response.rs  session_event_sharing.rs  session_management.rs  smart_scrobble_display.rs  test_album_artist.rs  test_album_loading.rs  test_album_tracks.rs  test_artist_tracks_with_albums.rs  test_edit_form_loading.rs  (+5 more)
examples/shared/: common.rs
nix/: hm-module.nix
python/: Cargo.toml  README.md  debug_test.py  ipython_startup.py  pyproject.toml  start_ipython.sh  test_bindings.py
python/python/lastfm_edit/: __init__.py
python/src/: lib.rs
scrobble-scrubber/: Cargo.toml  README.md
scrobble-scrubber/src/: config.rs  lib.rs  main.rs  openai_provider.rs  persistence.rs  rewrite.rs  scrub_action_provider.rs  scrubber.rs  web_interface.rs
scrobble-scrubber/tests/: config_tests.rs  rewrite_tests.rs
skills/lastfm-fake-scrobble-cleanup/: SKILL.md
skills/lastfm-fake-scrobble-cleanup/agents/: openai.yaml
src/: album.rs  api.rs  cancel.rs  client.rs  delete_manifest.rs  discovery_iterator.rs  edit.rs  edit_analysis.rs  error.rs  events.rs  headers.rs  iterator.rs  lib.rs  login.rs  main.rs  parsing.rs  retry.rs  scrobble_edit_context.rs  session.rs  session_persistence.rs  track.rs  trait.rs  tui.rs  types.rs  vcr_filters.rs  vcr_form_data.rs  vcr_matcher.rs  vcr_test_utils.rs
src/commands/: delete.rs  edit.rs  mod.rs  search.rs  show.rs  utils.rs
src/discovery/: album_tracks.rs  artist_tracks.rs  common.rs  exact_match.rs  mod.rs  track_variations.rs
tests/: compare_csrf_tokens.rs  compare_vcr_direct.rs  debug_cookie_extraction.rs  debug_login_test.rs  debug_replay_test.rs  debug_simple_csrf.rs  debug_vcr_login.rs  delete_manifest.rs  event_broadcasting.rs  event_broadcasting_test.rs  mock_client.rs  mock_client_test.rs  parsing_recent_tracks_test.rs  parsing_send_sync.rs  rate_limit_behavior.rs  recent_tracks_parsing_test.rs  send_sync_parsing_test.rs  send_sync_test.rs  shared_broadcaster_test.rs  thread_safety.rs  thread_safety_test.rs  track_parsing_test.rs  types.rs  vcr_body_consumption_test.rs  vcr_cookie_debug.rs  vcr_discovery_integration_test.rs  vcr_discovery_test.rs  vcr_filtering_test.rs  vcr_iterator_tests.rs  vcr_lastfm_auth_tests.rs  vcr_login_test.rs  vcr_post_test.rs  vcr_scrobble_edit_test.rs  vcr_tests.rs  vcr_wilco_test.rs  wilco_scrobble_edit_test.rs
tests/common/: mod.rs
tests/fixtures/: body_consumption_test.yaml  compare_test.yaml  csrf_comparison_test.yaml  debug_login_cassette.yaml  login_album_tracks.yaml  login_recent_tracks.yaml  login_search_artist.yaml  neil_young_tracks_page_1.html  neil_young_tracks_page_2.html  neil_young_tracks_page_3.html  post_test.yaml  queen_discover_scrobbles.yaml  queen_discover_scrobbles_filtered.yaml  rate_limited_page.html  recent_tracks_page_1.html  simple_test.yaml
tests/vcr/: album_search.rs  album_search_field_swap.rs  album_tracks.rs  api_recent_tracks.rs  artist_albums.rs  artist_tracks.rs  beatles_page4.rs  delete.rs  discovery.rs  edit.rs  edit_discovery_regressions.rs  get_album_tracks.rs  get_recent_tracks.rs  list_artists.rs  login.rs  mod.rs  recent_scrobbles_iterator.rs  recent_tracks.rs  recent_tracks_discovery.rs  search.rs  search_artist.rs  session_persistence.rs  special_character_albums.rs  username.rs  validate_session.rs
tests/vcr/common/: mod.rs
tests/vcr/fixtures/: album_tracks.yaml  api_recent_tracks_in_range_dir  artist_tracks_direct.yaml  beatles_page4.yaml  beatles_page4_dir  discover_exact_match_dir  (+12 more)
(+228 files in other folders)
