[package]
name = "lastfm-edit"
version = "4.1.0"
edition = "2021"
description = "Rust crate for programmatic access to Last.fm's scrobble editing functionality via web scraping"
license = "MIT"
repository = "https://github.com/colonelpanic8/lastfm-edit"
homepage = "https://github.com/colonelpanic8/lastfm-edit"
documentation = "https://docs.rs/lastfm-edit"
readme = "README.md"

[dependencies]
# Core dependencies
http-client = { version = "^6.6.3", package = "http-client-2", default-features = false }
http-types = { version = "^3.1.0", package = "http-types-2" }
scraper = { version = "0.23.1" }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
urlencoding = "2.1"
futures = "0.3"
regex = "1.0"
log = "0.4"
time = { version = "0.3", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

# Optional dependencies for examples and binaries
tokio = { version = "1.0", features = ["full"] }
env_logger = { version = "0.11" }
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"

# Optional mocking support
mockall = { version = "0.13", optional = true }

# VCR testing utilities
http-client-vcr = "1.1.0"


[features]
default = ["curl"]
wasm = ["http-client/wasm_client"]
curl = ["http-client/curl_client"]
mock = ["mockall"]

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
http-client-vcr = "1.1.0"
test-log = "0.2"

[[bin]]
name = "lastfm-edit"
path = "src/bin/lastfm-edit.rs"

[[example]]
name = "rename_album"
path = "examples/rename_album.rs"

[[example]]
name = "clean_artist_tracks"
path = "examples/clean_artist_tracks.rs"

[[example]]
name = "remove_remaster"
path = "examples/remove_remaster.rs"

[[example]]
name = "rename_artist"
path = "examples/rename_artist.rs"

[[example]]
name = "list_recent_tracks"
path = "examples/list_recent_tracks.rs"

[[example]]
name = "session_management"
path = "examples/session_management.rs"

[[example]]
name = "rate_limit_monitoring"
path = "examples/rate_limit_monitoring.rs"

[[example]]
name = "session_event_sharing"
path = "examples/session_event_sharing.rs"

[[example]]
name = "custom_session_manager"
path = "examples/custom_session_manager.rs"

[[example]]
name = "artist_tracks_direct"
path = "examples/artist_tracks_direct.rs"


