[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lastfm-edit"
description = "Python bindings for Last.fm scrobble editing functionality"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "lastfm-edit contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["lastfm", "scrobble", "music", "editing"]
dynamic = ["version"]
dependencies = [
    "ipython>=8.12.3",
]

[project.urls]
Homepage = "https://github.com/colonelpanic8/lastfm-edit"
Repository = "https://github.com/colonelpanic8/lastfm-edit"
Documentation = "https://docs.rs/lastfm-edit"
Changelog = "https://github.com/colonelpanic8/lastfm-edit/releases"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "lastfm_edit._lastfm_edit"
