[package]
name = "scrobble-scrubber"
version = "0.1.0"
edition = "2021"

[dependencies]
lastfm-edit = { path = ".." }
http-client = { version = "6.5", features = ["curl_client"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
log = "0.4"
env_logger = "0.11"
pickledb = "0.5"
async-trait = "0.1"
thiserror = "2.0.12"
