[package]
name = "scrobble-scrubber-app"
version = "0.1.0"
description = "Dioxus desktop UI for scrobble-scrubber"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "scrobble-scrubber-app"
path = "src/main.rs"

[dependencies]
dioxus = { version = "=0.7.9", default-features = false, features = ["launch", "lib"] }
scrobble-scrubber = { workspace = true, default-features = false }
scrobble-store.workspace = true
lastfm-edit.workspace = true
http-client = { version = "^6.6.3", package = "http-client-2", default-features = false, features = ["curl_client"] }
tokio = { version = "1", default-features = false, features = ["rt", "sync", "time", "macros"] }
toml = "0.8"
chrono.workspace = true
serde.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
