[package]
name = "scrobble-scrubber"
version = "0.1.0"
description = "Rules engine for automatic editing of Last.fm scrobbles"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lastfm-edit.workspace = true
scrobble-store.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
log.workspace = true

[dev-dependencies]
tokio.workspace = true
