[package]
name = "scrobble-scrubber"
version = "0.1.1"
description = "Rules engine for automatic editing of Last.fm scrobbles"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lastfm-edit.workspace = true
scrobble-store.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
log.workspace = true
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
tokio = { version = "1.0", default-features = false, features = ["sync", "time", "macros"] }

# Provider dependencies (feature-gated)
musicbrainz_rs = { version = "0.12", optional = true }
openai-api-rs = { version = "6.0.7", optional = true }

# CLI-only dependencies
clap = { version = "4.4", features = ["derive", "env"], optional = true }
toml = { version = "0.8", optional = true }
dirs = { version = "5.0", optional = true }
env_logger = { version = "0.11", optional = true }
http-client = { version = "^6.6.3", package = "http-client-2", default-features = false, features = ["curl_client"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
test-log = "0.2"
tempfile = "3"
lastfm-edit = { workspace = true, features = ["mock"] }

[features]
default = ["cli"]
cli = ["dep:clap", "dep:toml", "dep:dirs", "dep:env_logger", "dep:http-client", "tokio/rt"]
musicbrainz = ["dep:musicbrainz_rs"]
openai = ["dep:openai-api-rs"]

[[bin]]
name = "scrobble-scrubber"
path = "src/bin/scrobble-scrubber.rs"
required-features = ["cli"]
