[package]
name = "scrobble-store"
version = "0.1.0"
description = "Offline synchronization and local storage for Last.fm scrobbles"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lastfm-edit.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
log.workspace = true
sha2 = "0.10"
tokio = { version = "1.0", default-features = false, features = ["sync", "time", "macros"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
