[package]
name = "scrobble-store"
version = "0.1.2"
description = "Offline synchronization and local storage for Last.fm scrobbles"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lastfm-edit = { workspace = true, default-features = false }
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
log.workspace = true
sha2 = "0.10"
tokio = { version = "1.0", default-features = false, features = ["sync", "time", "macros"] }
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI-only dependencies
clap = { version = "4.4", features = ["derive", "env"], optional = true }
env_logger = { version = "0.11", optional = true }
dirs = { version = "5.0", optional = true }
http-client = { version = "^6.6.3", package = "http-client-2", default-features = false, features = ["curl_client"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
lastfm-edit = { workspace = true, features = ["mock"] }

[features]
default = ["cli"]
cli = ["dep:clap", "dep:env_logger", "dep:dirs", "dep:http-client", "tokio/rt"]

[[bin]]
name = "scrobble-store"
path = "src/bin/scrobble-store.rs"
required-features = ["cli"]
